prusti-tests/tests/verify_overflow/ui/core_proof/counterexamples/arrays.stderr
error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/arrays.rs:10:5
   |
10 |     assert!(a[1] == 2);
   |     ^^^^^^^^^^^^^^^^^^
   |
note: the failing assertion is here
  --> $DIR/arrays.rs:10:5
   |
10 |     assert!(a[1] == 2);
   |     ^^^^^^^^^^^^^^^^^^
note: counterexample for "a"
       value:   [?, 1, ]
  --> $DIR/arrays.rs:8:17
   |
8  |     let mut a = [1; 2];
   |                 ^^^^^^
note: counterexample for "a"
       value:   [2, 1, ]
  --> $DIR/arrays.rs:9:5
   |
9  |     a[0] = 2;
   |     ^^^^^^^^
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/arrays.rs:17:5
   |
17 |     assert!(false)
   |     ^^^^^^^^^^^^^^
   |
note: the failing assertion is here
  --> $DIR/arrays.rs:17:5
   |
17 |     assert!(false)
   |     ^^^^^^^^^^^^^^
note: counterexample for "a"
       value:   [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ]
  --> $DIR/arrays.rs:14:13
   |
14 |     let a = [1; 10]; 
   |             ^^^^^^^
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/arrays.rs:21:15
   |
21 | fn test3() -> bool {
   |               ^^^^
   |
note: the error originates here
  --> $DIR/arrays.rs:21:1
   |
21 | / fn test3() -> bool {
22 | |     let a = [1, 2, 3, 4];
23 | |     a[0] == a[1]   
24 | | }
   | |_^
note: counterexample for "a"
       value:   [1, 2, ?, ?, ]
  --> $DIR/arrays.rs:22:13
   |
22 |     let a = [1, 2, 3, 4];
   |             ^^^^^^^^^^^^
note: counterexample for "result"
       value:   false
  --> $DIR/arrays.rs:23:5
   |
23 |     a[0] == a[1]   
   |     ^^^^^^^^^^^^

error: aborting due to 3 previous errors

